# Agent

./: .env  .env.example  .gitignore  README.md  app_web.py  main.py  memory.sqlite  pyproject.toml  rag_engine.py  requirements.txt  web-ui-重构方案清单.md  优化任务清单.md
agent_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli/: .env.example  fullscreen_terminal.py
config/: settings.py
core/domain/: policies.py  retrieval_planner.py
core/security/: audit.py  auth.py  frequency_guard.py  input_guard.py  rate_limit.py  tool_guard.py
eval/: compare_reports.py  e2e_regression_matrix.md  eval_cases.json  run_eval.py
infra/llm/: openai_compatible.py
infra/retrieval/: model_reranker.py  search_pipeline.py  storage_utils.py
scripts/: quality_gate.py  show_metrics_dashboard.py
smart_note_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli_fullscreen_terminal.py  test_integration_agent_flow.py  test_main_cli_streaming.py  test_main_cli_ui.py  test_model_reranker.py  test_openai_compatible_stream.py  test_policies.py  test_retrieval_planner.py  test_search_pipeline.py  test_security.py  test_storage_utils.py
web/: app.js  index.html
workflow/: graph.py  state.py
workflow/nodes/: agent_node.py
